--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,15 @@
+a {
+    text-decoration: none;
+}
+
 nav {
-    background-color: black;
+    background-color: #111;
     height: 8vh;
-    width: 97%;
+    width: 98%;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
+    text-decoration: none;
 }
 
 nav div {
@@ -12,7 +17,8 @@ nav div {
 }
 
 .logo {
-    font-size: xx-large;
+    width: 40%;
+    font-size: 3vw;
     font-weight: 500;
     display: flex;
     justify-content: center;
@@ -29,18 +35,26 @@ nav div {
 ul  {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    text-decoration: none;
+}
+
+ul a {
+    color: white;
 }
 
 li {
     display: flex;
     padding: 10px;
-    text-decoration: none;
+    
 }
 
 .btn-cadastrar {
-    background-color: black;
+    background-color: #111;
     color: white;
-    border: 1px solid white;
-    border-radius: 10px;
+    border: 2px solid white;
+    border-radius: 10px;    
+}
+
+.btn-cadastrar a {
+    color: white;
 }
