--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -3,29 +3,25 @@ body, html {
 }
 
 .heroImage {
-    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
     height: auto;
 }
 
-.hero {
-    background-image: url("../../images/cristo.jpeg");
-
-    /* Set a specific height */
-    height: 50%;
-
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-    /* Place text in the middle of the image */
 .hero-text {
+    margin: 0;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+}
+
+.placeName {
+    margin: 0;
+    font-size: 200px;
+    font-weight: 600;
 }
