--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,16 +1,13 @@
-body, html {
-    height: 100%;
-}
-
 .heroImage {
     display: flex;
     justify-content: center;
     align-content: center;
     width: 100%;
-    height: auto;
+    height: 90vh;
 }
 
 .hero-text {
+    font-size: 1.5vh;
     margin: 0;
     text-align: center;
     position: absolute;
@@ -22,6 +19,6 @@ body, html {
 
 .placeName {
     margin: 0;
-    font-size: 200px;
+    font-size: 20vh;
     font-weight: 600;
 }
