--- a/src/components/RegisterArea/RegisterArea.css
+++ b/src/components/RegisterArea/RegisterArea.css
@@ -1,9 +1,9 @@
-.Intro {
+.RegisterArea {
     background-color: rgb(242, 242, 242);
     padding: 20px;
 }
 
-.btn-destinos {
+.btn-cadastre {
     border: 1px solid black;
     border-radius: 10px;
     padding: 10px 30px;
