--- a/src/pages/AllRoutesPage.css
+++ b/src/pages/AllRoutesPage.css
@@ -1,19 +1,12 @@
-/* * {
-    border: 1px solid red;
-} */
-
-a {
-    color: #333
-}
-
 .RouteCard {    
     padding: 20px;
     background-color: rgb(242, 242, 242);
     box-shadow: 10px 10px 20px rgb(113, 113, 113);
-    margin: 50px;
-    width: 60vw;
+    margin: 50px auto;
+    width: 600px;
     display: flex;
     justify-content: center;
+    border-radius: 4px;
 }
 
 .imgDiv {
@@ -21,12 +14,30 @@ a {
 }
 
 .imageBox {
-    width: 400px;
+    width: 300px;
     height: 300px;
 } 
+
 .routeInfo {
+    font-family: 'Permanent Marker', sans-serif;
     padding-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.routeInfo h2 {
+    font-size: 16px;
+}
+
+
+a {
+    color: #333
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
 }
