--- a/src/pages/AllRoutesPage.css
+++ b/src/pages/AllRoutesPage.css
@@ -2,6 +2,11 @@
     border: 1px solid red;
 } */
 
+.cardBox {
+    display: flex;
+    flex-direction: column;
+}
+
 a {
     color: #333
 }
@@ -10,7 +15,7 @@ a {
     padding: 20px;
     background-color: rgb(242, 242, 242);
     box-shadow: 10px 10px 20px rgb(113, 113, 113);
-    margin: 50px;
+    margin-top: 50px;
     width: 60vw;
     display: flex;
     justify-content: center;
