--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -3,7 +3,7 @@
 } */
 
 .main {
-    margin: 20px 0 20px;
+    margin: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
