--- a/src/pages/AllRoutesPage.css
+++ b/src/pages/AllRoutesPage.css
@@ -47,3 +47,25 @@ a {
     justify-content: space-around;
     flex-flow: wrap;
 }
+
+.OptionsBtn {
+    display: flex;
+    height: 40px;
+    align-items: center;
+    
+    align-items: center;
+    justify-content: center;
+}
+
+.CardBtns {
+    width: 40px;
+    height: 40px;
+}
+
+.UpdateLink {
+    margin: 0 5px;
+    width: 38px;
+    height: 38px;
+    border: 1px solid black;
+    border-radius: 2px;
+}
