--- a/src/pages/AllRoutesPage.css
+++ b/src/pages/AllRoutesPage.css
@@ -3,7 +3,7 @@
     background-color: rgb(242, 242, 242);
     box-shadow: 10px 10px 20px rgb(113, 113, 113);
     margin: 50px auto;
-    width: 600px;
+    width: 700px;
     display: flex;
     justify-content: center;
     border-radius: 4px;
@@ -30,7 +30,6 @@
     font-size: 16px;
 }
 
-
 .container a {
     color: #333
 }
@@ -39,33 +38,36 @@ a {
     color: white;
  }
 
-
-
 .container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-flow: wrap;
+    
 }
 
 .OptionsBtn {
+    align-items: baseline;
     display: flex;
     height: 40px;
-    align-items: center;
-    
-    align-items: center;
-    justify-content: center;
 }
 
 .CardBtns {
     width: 40px;
     height: 40px;
+    
 }
 
 .UpdateLink {
-    margin: 0 5px;
+    margin: 0 10px;
     width: 38px;
     height: 38px;
-    border: 1px solid black;
     border-radius: 2px;
+}
+
+.VerMais {
+    border: 1px solid black;
+    border-radius: 4px;
+    width: 80px;
+    margin: 0 auto;
 }
