--- a/src/pages/AllRoutesPage.css
+++ b/src/pages/AllRoutesPage.css
@@ -55,7 +55,11 @@ a {
 .CardBtns {
     width: 40px;
     height: 40px;
-    
+    border: none;   
+}
+
+.CardBtns:hover {
+    cursor: pointer;
 }
 
 .UpdateLink {
