--- a/src/pages/RouteDetailsPage.css
+++ b/src/pages/RouteDetailsPage.css
@@ -1,4 +1,3 @@
-
 .ImageCardBox {
     padding: 20px;
     background-color: rgb(242, 242, 242);
@@ -24,4 +23,9 @@
     width: 400px;
     height: 400px;
     padding: 20px;
+}
+
+.content {
+    background-color: rgb(230, 229, 229);
+    
 }
