--- a/src/pages/NewRoutePage.css
+++ b/src/pages/NewRoutePage.css
@@ -23,6 +23,19 @@
     width: 180px;
 }
 
+.Label textarea {
+    margin: 20px -20%;
+    width: 120%;
+    height: 80px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+}
+
 .SubmitButton {
     padding: 5px;
     font-family: 'Permanent Marker', sans-serif;
