--- a/src/pages/NewRoutePage.css
+++ b/src/pages/NewRoutePage.css
@@ -24,7 +24,7 @@
 }
 
 .Label textarea {
-    margin: 20px -20%;
+    margin: 20px -20pxgi;
     width: 120%;
     height: 80px;
     padding: 12px 20px;
