--- a/src/pages/RouteDetailsPage.css
+++ b/src/pages/RouteDetailsPage.css
@@ -2,7 +2,7 @@
     padding: 20px;
     background-color: rgb(242, 242, 242);
     box-shadow: 10px 10px 20px rgb(113, 113, 113);
-    margin: 50px auto;
+    margin: 10px auto;
     width: 440px;
     border-radius: 4px;
 }
@@ -27,6 +27,17 @@
 }
 
 .content {
-    background-color: rgb(230, 229, 229);
-    
+    background-color: rgb(230, 229, 229);    
+}
+
+.updateDiv {
+    display: flex;
+    justify-content: end;
+}
+
+.UpdateLink {
+    color:black;
+    margin: 10px;
+    width: 38px;
+    height: 38px;
 }
