--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -6,9 +6,14 @@
     align-items: center;
 }
 
+.divImg {
+    height: 400px;
+    width: 400px;
+}
+
 .imgMainContent {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -25,8 +30,8 @@
 }
 
 .mainText {
-    padding: 10px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
 }
